--- a/tboxapp/modules/tileContentViews/TileContentDataViewPhotos.xib
+++ b/tboxapp/modules/tileContentViews/TileContentDataViewPhotos.xib
@@ -15,56 +15,50 @@
             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Uud-Qv-sOk">
-                    <rect key="frame" x="0.0" y="95" width="55" height="55"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="55" id="NcL-dl-KGd"/>
-                        <constraint firstAttribute="height" constant="55" id="dQN-6m-RWQ"/>
-                    </constraints>
-                </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wm2-fY-FRK">
-                    <rect key="frame" x="55" y="95" width="55" height="55"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="55" id="K2E-ii-clu"/>
-                        <constraint firstAttribute="width" constant="55" id="m9K-Em-kMX"/>
-                    </constraints>
-                </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jk0-2m-KIl">
-                    <rect key="frame" x="0.0" y="40" width="55" height="55"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="55" id="7aP-wn-EWM"/>
-                        <constraint firstAttribute="height" constant="55" id="oDp-Dv-et1"/>
-                    </constraints>
-                </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tRu-P1-8EM">
-                    <rect key="frame" x="55" y="40" width="55" height="55"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="55" id="9Lb-cu-PDF"/>
-                        <constraint firstAttribute="height" constant="55" id="pbI-bY-F8l"/>
-                    </constraints>
-                </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iYi-Tk-hau">
+                    <rect key="frame" x="8" y="40" width="134" height="102"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Plus_button.png" translatesAutoresizingMaskIntoConstraints="NO" id="pRg-ky-vIB">
+                            <rect key="frame" x="0.0" y="70" width="44" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Plus_button.png" translatesAutoresizingMaskIntoConstraints="NO" id="PQd-bp-Rpy">
+                            <rect key="frame" x="0.0" y="25" width="44" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Plus_button.png" translatesAutoresizingMaskIntoConstraints="NO" id="XV0-FK-afI">
+                            <rect key="frame" x="45" y="25" width="44" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Plus_button.png" translatesAutoresizingMaskIntoConstraints="NO" id="6uT-ir-dMN">
+                            <rect key="frame" x="45" y="70" width="44" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="Uud-Qv-sOk" secondAttribute="bottom" id="7Wd-uk-s46"/>
-                <constraint firstItem="wm2-fY-FRK" firstAttribute="top" secondItem="tRu-P1-8EM" secondAttribute="bottom" id="9of-zg-eI0"/>
-                <constraint firstItem="tRu-P1-8EM" firstAttribute="leading" secondItem="Jk0-2m-KIl" secondAttribute="trailing" id="B2I-S2-mM3"/>
-                <constraint firstItem="Jk0-2m-KIl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="L3m-KB-q35"/>
-                <constraint firstItem="Uud-Qv-sOk" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="P0B-UR-Fng"/>
-                <constraint firstAttribute="bottom" secondItem="wm2-fY-FRK" secondAttribute="bottom" id="SuR-uE-R8y"/>
-                <constraint firstItem="wm2-fY-FRK" firstAttribute="leading" secondItem="Uud-Qv-sOk" secondAttribute="trailing" id="gEn-Cf-9JX"/>
-                <constraint firstItem="Uud-Qv-sOk" firstAttribute="top" secondItem="Jk0-2m-KIl" secondAttribute="bottom" id="rdh-bO-Vw8"/>
+                <constraint firstItem="iYi-Tk-hau" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="Ct3-fR-kjk"/>
+                <constraint firstAttribute="bottom" secondItem="iYi-Tk-hau" secondAttribute="bottom" constant="8" id="gr0-mD-1GU"/>
+                <constraint firstItem="iYi-Tk-hau" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="40" id="k4J-Mz-Me8"/>
+                <constraint firstAttribute="trailing" secondItem="iYi-Tk-hau" secondAttribute="trailing" constant="8" id="peT-AN-xU8"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="prev1" destination="Jk0-2m-KIl" id="a9A-F9-qVy"/>
-                <outlet property="prev2" destination="tRu-P1-8EM" id="hgd-0D-USD"/>
-                <outlet property="prev3" destination="Uud-Qv-sOk" id="F52-wC-oS1"/>
-                <outlet property="prev4" destination="wm2-fY-FRK" id="sdL-J6-vwE"/>
+                <outlet property="innerFrame" destination="iYi-Tk-hau" id="Xud-sX-aWM"/>
+                <outlet property="prev1" destination="PQd-bp-Rpy" id="JFe-GW-cug"/>
+                <outlet property="prev2" destination="XV0-FK-afI" id="D3b-zM-X4d"/>
+                <outlet property="prev3" destination="pRg-ky-vIB" id="t8I-AF-6wo"/>
+                <outlet property="prev4" destination="6uT-ir-dMN" id="5hs-VM-v48"/>
             </connections>
             <point key="canvasLocation" x="-80" y="361"/>
         </view>
     </objects>
+    <resources>
+        <image name="Plus_button.png" width="218" height="218"/>
+    </resources>
 </document>
